yaml/jenkins/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: namespace_template
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
        - path: /jenkins
          pathType: ImplementationSpecific
          backend:
            service:
              name: jenkins-service
              port:
                number: 8080
